# gedit-plugins

./: .gitlab-ci.yml  NEWS  README.md  gedit-plugins.doap  meson.build  meson_options.txt
help/: meson.build
help/C/: legal-plugins.xml
help/de/: de.po
help/fr/: fr.po
help/pt_BR/: pt_BR.po
plugins/: meson.build
plugins/bookmarks/: bookmarks.plugin.desktop.in.in  gedit-bookmarks-app-activatable.c  gedit-bookmarks-plugin.c  gedit-bookmarks.metainfo.xml.in  meson.build
plugins/bracketcompletion/: bracketcompletion.plugin.desktop.in.in  bracketcompletion.py  gedit-bracketcompletion.metainfo.xml.in  meson.build
plugins/charmap/: charmap.plugin.desktop.in.in  gedit-charmap.metainfo.xml.in  meson.build
plugins/charmap/charmap/: __init__.py
plugins/codecomment/: codecomment.plugin.desktop.in.in  codecomment.py  gedit-codecomment.metainfo.xml.in  meson.build
plugins/colorpicker/: colorpicker.plugin.desktop.in.in  gedit-colorpicker.metainfo.xml.in  meson.build
plugins/colorschemer/: meson.build
plugins/colorschemer/schemer/: languages.py  schemer.py
plugins/commander/: meson.build
plugins/commander/commander/commands/: __init__.py
plugins/drawspaces/: drawspaces.plugin.desktop.in.in  gedit-drawspaces.metainfo.xml.in  meson.build
plugins/findinfiles/: meson.build
plugins/git/: gedit-git.metainfo.xml.in  git.plugin.desktop.in.in  meson.build
plugins/joinlines/: gedit-joinlines.metainfo.xml.in  joinlines.plugin.desktop.in.in  meson.build
plugins/multiedit/: gedit-multiedit.metainfo.xml.in  meson.build  multiedit.plugin.desktop.in.in
plugins/sessionsaver/: meson.build  sessionsaver.plugin.desktop.in.in
plugins/sessionsaver/sessionsaver/: __init__.py  appactivable.py  dialogs.py  session.py  sessionstore.py  windowactivable.py  xmlsessionstore.py
plugins/sessionsaver/sessionsaver/ui/: sessionsaver.ui
plugins/sessionsaver/tests/: meson.build  testsession.py  testsessionstore.py
plugins/smartspaces/: gedit-smartspaces.metainfo.xml.in  meson.build  smartspaces.plugin.desktop.in.in
plugins/synctex/: meson.build
plugins/synctex/synctex/: synctex.py
plugins/terminal/: gedit-terminal.metainfo.xml.in  meson.build  terminal.plugin.desktop.in.in  terminal.py
plugins/textsize/: gedit-textsize.metainfo.xml.in  meson.build  textsize.plugin.desktop.in  textsize.plugin.desktop.in.in
plugins/translate/: meson.build
plugins/translate/translate/: preferences.py
plugins/wordcompletion/: gedit-wordcompletion.metainfo.xml.in  meson.build  wordcompletion.plugin.desktop.in.in
plugins/zeitgeist/: meson.build
po/: POTFILES.in  POTFILES.skip  hi.po  kk.po  lv.po  sl.po  tr.po  uk.po
